--- a/DAL.Adapters/Hackathon.Adapters.csproj
+++ b/DAL.Adapters/Hackathon.Adapters.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <AssemblyName>Hackathon.Adapters</AssemblyName>
+    <RootNamespace>Hackathon.Adapters</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
