--- a/Tests/Hackathon.Tests.csproj
+++ b/Tests/Hackathon.Tests.csproj
@@ -67,9 +67,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BL.Providers\Hackathon.Providers.csproj">
-      <Project>{eb16f8d8-092f-4d3f-9c7a-cbbd91767459}</Project>
-      <Name>Hackathon.Providers</Name>
+    <ProjectReference Include="..\BL.Providers\BL.Providers.csproj">
+      <Project>{64690120-4dd3-47a6-bc82-d7f19a2b0811}</Project>
+      <Name>BL.Providers</Name>
     </ProjectReference>
     <ProjectReference Include="..\Contracts\Hackathon.Contracts.csproj">
       <Project>{04d1decb-7cf8-4c4e-a2a4-4623f76cbe62}</Project>
@@ -84,7 +84,9 @@
       <Name>Hackathon.StubData</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
