--- a/Web/Web.config
+++ b/Web/Web.config
@@ -2,7 +2,7 @@
 
 <configuration>
   <configSections>
-    <section name="Unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
+    <section name="Unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
   </configSections>
 
   <appSettings>
@@ -14,8 +14,7 @@
 
   <Unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <container>
-      <register type="Hackathon.Contracts.Initiatives.IInitiativeAdapter, Hackathon.Contracts"
-                mapTo="Hackathon.StubData.InitiativeStubAdapter, Hackathon.StubData" />
+      <register type="Hackathon.Contracts.Initiatives.IInitiativeAdapter, Hackathon.Contracts" mapTo="Hackathon.StubData.InitiativeStubAdapter, Hackathon.StubData" />
     </container>
   </Unity>
 
