Added Registration Provider

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -15,6 +15,7 @@
   <Unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <container>
       <register type="Hackathon.Contracts.Initiatives.IInitiativeAdapter, Hackathon.Contracts" mapTo="Hackathon.StubData.InitiativeStubAdapter, Hackathon.StubData" />
+      <register type="Hackathon.Contracts.Challenge.IChallengeAdapter, Hackathon.Contracts" mapTo="Hackathon.StubData.ChallengeStubAdapter, Hackathon.StubData" />
     </container>
   </Unity>
 
