--- a/BL.Providers/BL.Providers.csproj
+++ b/BL.Providers/BL.Providers.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ChallengeProvider.cs" />
     <Compile Include="InitiativeProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrationProvider.cs" />
     <Compile Include="Utilities\DependencyFactory.cs" />
   </ItemGroup>
   <ItemGroup>
