--- a/Hackathon.Contracts/Hackathon.Contracts.csproj
+++ b/Hackathon.Contracts/Hackathon.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A906B834-DD57-4B4A-8694-35E8CFE6428C}</ProjectGuid>
+    <ProjectGuid>{F4E52951-C84B-4216-AA1D-F4BC7F31E041}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hackathon.StubData</RootNamespace>
-    <AssemblyName>Hackathon.StubData</AssemblyName>
+    <RootNamespace>Hackathon.Contracts</RootNamespace>
+    <AssemblyName>Hackathon.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
-      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,22 +40,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChallengeStubAdapter.cs" />
-    <Compile Include="Challenge\AdapterBuilder.cs" />
-    <Compile Include="Initiative\AdapterBuilder.cs" />
-    <Compile Include="Challenge\ChallengeBuilder.cs" />
-    <Compile Include="Initiative\IncentiveBuilder.cs" />
+    <Compile Include="Answer.cs" />
+    <Compile Include="Challenge\Challenge.cs" />
+    <Compile Include="Challenge\ChallengeRequest.cs" />
+    <Compile Include="Challenge\ChallengeType.cs" />
+    <Compile Include="Challenge\IChallengeAdapter.cs" />
+    <Compile Include="Challenge\IChallengeUpdatable.cs" />
+    <Compile Include="Challenge\Types\MultiChoiceChallenge.cs" />
+    <Compile Include="Challenge\Types\YesNoChallenge.cs" />
+    <Compile Include="Initiatives\IInitiativeAdapter.cs" />
+    <Compile Include="Initiatives\IInitiativeUpdatable.cs" />
+    <Compile Include="Initiatives\Initiative.cs" />
+    <Compile Include="Initiatives\InitiativeRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InitiativeStubAdapter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Hackathon.Contracts\Hackathon.Contracts.csproj">
-      <Project>{f4e52951-c84b-4216-aa1d-f4bc7f31e041}</Project>
-      <Name>Hackathon.Contracts</Name>
-    </ProjectReference>
+    <Compile Include="Registration\IRegistrationAdapter.cs" />
+    <Compile Include="Registration\RegistrationRequest.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="YesNoEnum.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
